# dotium

./: Cargo.toml  README.md
curseforge/: Cargo.toml
dotium/src/: lib.rs  project.rs  request.rs  version.rs
modrinth/: Cargo.toml
modrinth/src/: converters.rs
src/: lib.rs  project.rs  request.rs  version.rs
src/modrinth/: converters.rs  mod.rs
