[package]
name = "dotium"
version = "0.1.0"
edition = "2021"

[features]
default = ["modrinth", "curseforge", "github"]
modrinth = ["dep:ferinth"]
curseforge = ["dep:furse"]
github = ["dep:octocrab"]

[dependencies]
serde = { version = "~1.0.137", features = ["derive"] }
chrono = { version = "~0.4.19", features = ["serde"] }
octocrab = { version = "~0.16.0", optional = true }
url = { version = "~2.2.2", features = ["serde"] }
ferinth = { version = "~2.4.0", optional = true }
furse = { version = "~1.4.0", optional = true }
async-trait = "~0.1.56"
thiserror = "~1.0.31"
